# learning-journey

./: package-lock.json
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/controllers/: admin.py  auth.py  course.py  exam.py  favorites.py
backend/db/: __init__.py  database.py
backend/routers/: __init__.py  admin.py  auth.py  course.py  exam.py  favorites.py  notes.py
backend/schemas/: auth.py  course.py  exam.py  favorites.py  notes.py
backend/services/: auth.py  course.py  exam.py
backend/utils/: __init__.py  auth.py  cloudinary.py  course_content.py  get_role.py  headers.py  reports.py
frontend-pro/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend-pro/src/: App.tsx  index.css  main.tsx
frontend-pro/src/components/: HomeCard.tsx  Layout.tsx  Navbar.tsx  SettingsSilder.tsx  Spinner.tsx  navbar.tsx
frontend-pro/src/constants/: courseContent.ts  cssConstants.ts
frontend-pro/src/pages/: ContentMap.tsx  Course.tsx  Goals.tsx  Instructions.tsx  LandingPage.tsx  NotFoundPage.tsx  UnauthorizedPage.tsx
frontend-pro/src/services/: apiReq.ts  auth.ts
frontend-pro/src/utils/: getHomePath.ts  helpers.ts  reports.ts
frontend-regular/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend-regular/src/: App.tsx  index.css  main.tsx
frontend-regular/src/components/: HomeCard.tsx  Layout.tsx  Navbar.tsx  Spinner.tsx
frontend-regular/src/constants/: courseContent.ts
schemas/: Exam.ts  Settings.ts  User.ts  auth.ts  course.ts  progress.ts
(+81 files in other folders)
